--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "inicio":"concurrently \"json-server --watch destinos.json --port 3001\" \"json-server --watch usuarios.json --port 3002\" \"ng serve\"",
+    "inicio": "concurrently \"json-server --watch destinos.json --port 3001\" \"json-server --watch usuarios.json --port 3002\" \"ng serve\"",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
@@ -24,6 +24,8 @@
     "@angular/ssr": "^19.1.5",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "jquery": "^3.7.1",
+    "ngx-bootstrap": "^19.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
