--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "mi-proyecto",
+  "name": "proyecto",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "inicio": "concurrently \"json-server --watch destinos.json --port 3001\" \"json-server --watch usuarios.json --port 3002\" \"ng serve\"",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:mi-proyecto": "node dist/mi-proyecto/server/server.mjs"
+    "serve:ssr:proyecto": "node dist/proyecto/server/server.mjs"
   },
   "private": true,
   "dependencies": {
@@ -21,23 +20,19 @@
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/platform-server": "^19.1.0",
     "@angular/router": "^19.1.0",
-    "@angular/ssr": "^19.1.5",
-    "bootstrap": "^5.3.3",
+    "@angular/ssr": "^19.1.8",
     "express": "^4.18.2",
-    "jquery": "^3.7.1",
-    "ngx-bootstrap": "^19.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.1.5",
-    "@angular/cli": "^19.1.5",
+    "@angular-devkit/build-angular": "^19.1.8",
+    "@angular/cli": "^19.1.8",
     "@angular/compiler-cli": "^19.1.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
-    "concurrently": "^9.1.2",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
