--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap-icons": "^1.11.3",
     "express": "^4.18.2",
     "jquery": "^3.7.1",
+    "leaflet": "^1.9.4",
     "ngx-bootstrap": "^19.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -38,6 +39,7 @@
     "@angular/compiler-cli": "^19.1.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.16",
     "@types/node": "^18.18.0",
     "concurrently": "^9.1.2",
     "jasmine-core": "~5.5.0",
